k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-platform-app
  namespace: platform-dev
  labels:
    app: aws-platform-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-platform-app
  template:
    metadata:
      labels:
        app: aws-platform-app
        environment: dev
    spec:
      containers:
        - name: aws-platform-app
          image: 373631301915.dkr.ecr.eu-west-2.amazonaws.com/aws-platform-dev-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
